--- a/client/src/app.html
+++ b/client/src/app.html
@@ -1,4 +1,5 @@
 <template>
+	<require from="./resources/css/styles.css"></require>
     <div class="container">
 		<router-view></router-view>
 	</div>
