--- a/client/src/modules/list.html
+++ b/client/src/modules/list.html
@@ -1,5 +1,22 @@
 <template>
-	<h1>${message}</h1>
-    <compose show.bind="showList" view="./components/todoList.html"></compose>
-    <compose show.bind="!showList" view="./components/todoForm.html"></compose>
+	<div class="col-sm-8 offset-sm-2 topMargin">
+		<button class="btn btn-default btn-sm pull-right" click.trigger="logout()">Sing Out</button>
+		<h1>${message}</h1>
+		<compose view="./components/todoList.html"></compose>
+		<div class="modal fade" id="mainModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+							<h5 class="modal-title">${modalTitle}</h5>
+							<button type="button" class="close" data-dismiss="modal">
+								<i class="fa fa-close"></i>
+							</button>
+					</div>
+					<div class="modal-body">
+						<compose view="./components/todoForm.html"></compose>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </template>
